# QtComAssistant

./: CMakeLists.txt  README.md  commanddialog.cpp  commanddialog.h  main.cpp  mainwindow.cpp  mainwindow.h  serialservice.cpp  serialservice.h  utils.cpp  utils.h
